--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.SignUpActivity"></activity>
-        <activity android:name=".activity.LoginActivity" />
+        <activity
+            android:name=".activity.SignUpActivity"
+            android:theme="@style/SplashTheme" />
+        <activity
+            android:name=".activity.LoginActivity"
+            android:theme="@style/SplashTheme" />
         <activity
             android:name=".activity.SplashActivity"
             android:theme="@style/SplashTheme">
