--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,11 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.wdullaer:materialdatetimepicker:4.2.3'
+
+    implementation 'com.github.tlaabs:TimetableView:1.0.3-fx1'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.squareup.retrofit2:retrofit:2.8.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
@@ -49,4 +54,7 @@ dependencies {
 }
 repositories {
     mavenCentral()
+
+    maven { url 'https://jitpack.io' }
+
 }
